# GUI-to-move-robot-arm

./: CMakeLists.txt  README.md  package.xml
include/ros_gui/: main_window.hpp  qnode.hpp
launch/: controlGUI.launch
server/: vision_node.cpp
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
